# OrimaLang

./: .gitignore  Cargo.toml  README.md  app.ori
src/: evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs
www/: index.html  index.js
www/pkg/: orimalang.d.ts  orimalang.js  orimalang_bg.wasm  orimalang_bg.wasm.d.ts
