[package]
name = "orimalang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orima"
path = "src/main.rs"

[lib]
name = "orimalang"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]

[profile.release]
opt-level = "s"
